Responded to feedback: - Render the dimming div in php instead of the dom manipulation - Fix the div CSS so that it is also dimmed past the scrolling - Renamed a constant - Fixed some spacing - Check for dismissal before checking if the user is new to labels

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -469,12 +469,12 @@
 
 .wcs-pointer-page-dimmer {
 	display: none;
-	position: absolute;
-	width: 100%;
-	height: 100%;
+	position: fixed;
 	background-color: black;
 	top: 0;
+	bottom: 0;
 	left: 0;
+	right: 0;
 	z-index: 9998;
 	opacity: 0.5;
 }
